--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Second work in practise",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "nodemon": "^3.1.0"
+  },
+  "dependencies": {
+    "mongoose": "^8.2.1"
   }
 }
