--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "Second work in practise",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js"
@@ -14,6 +15,7 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "express": "^4.18.3",
     "mongoose": "^8.2.1"
   }
 }
