--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "nodemon": "^3.1.0"
   },
   "dependencies": {
+    "@types/node": "^20.11.27",
     "express": "^4.18.3",
-    "mongoose": "^8.2.1"
+    "express-fileupload": "^1.4.3",
+    "mongoose": "^8.2.1",
+    "uuid": "^9.0.1"
   }
 }
