--- a/package.json
+++ b/package.json
@@ -16,11 +16,18 @@
   },
   "dependencies": {
     "@types/node": "^20.11.27",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "express": "^4.18.3",
     "express-fileupload": "^1.4.3",
+    "jwt-simple": "^0.5.6",
     "mongoose": "^8.2.1",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "uuid": "^9.0.1"
   }
 }
